fix horizontal scroll issues and disable select highlight bg color on input click

--- a/src/components/about/IntroSection.module.css
+++ b/src/components/about/IntroSection.module.css
@@ -25,6 +25,7 @@
 .intro p {
   font-size: 15px;
   line-height: 25px;
+  font-weight: 300;
 }
 @media only screen and (width >= 768px) {
   .section {
