--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,18 @@
   --header-height: 96px;
 }
 
+body {
+  overflow-x: hidden;
+}
+input {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 /* FONTS */
 @font-face {
   font-family: "Jost";
@@ -33,6 +45,9 @@
 body {
   font-family: "Jost";
   position: relative; /* correctly position absolute elements */
+}
+button:focus {
+  background-color: red;
 }
 
 @media only screen and (width >= 768px) {
